[package]
name = "ark-algebra-test-templates"
version = "0.3.0"
authors = [ "arkworks contributors" ]
description = "A library for tests for finite fields, elliptic curves, and pairings"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/algebra"
documentation = "https://docs.rs/ark-curve-tests/"
keywords = ["cryptography", "finite-fields", "elliptic-curves" ]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.56"

[dependencies]
ark-std = { version = "^0.3.0", git= "https://github.com/arkworks-rs/std" }
ark-serialize = { version = "^0.3.0", git= "https://github.com/arkworks-rs/algebra", default-features = false }
ark-ff = { version = "^0.3.0", git= "https://github.com/arkworks-rs/algebra", default-features = false }
ark-ec = { version = "^0.3.0", git= "https://github.com/arkworks-rs/algebra", default-features = false }
ark-bls12-381 = { version = "^0.3.0", git = "https://github.com/arkworks-rs/curves", features = [ "curve" ] }

[patch.crates-io]
ark-std = { git= "https://github.com/arkworks-rs/std" }
ark-ec = { git= "https://github.com/arkworks-rs/algebra" }
ark-ff = { git= "https://github.com/arkworks-rs/algebra" }
ark-serialize = { git= "https://github.com/arkworks-rs/algebra" }
ark-bls12-381 = { git= "https://github.com/arkworks-rs/curves" }

[features]
default = []
std = [ "ark-std/std", "ark-ff/std", "ark-serialize/std", "ark-ec/std" ]
